...
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_toolbar_search"
        android:icon="@drawable/ic_search_white_24px"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView"
        android:orderInCategory="50"
        android:title="@string/main_toolbar_search" />

    <item
        android:id="@+id/action_toolbar_add"
        android:orderInCategory="400"
        android:title="@string/title_activity_add_field"
        android:icon="@drawable/ic_add"
        app:showAsAction="always"/>

    <item
...

    <item
        android:id="@+id/action_toolbar_tutorial"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="never"
        android:orderInCategory="2000"
        android:title="@string/help_label" />

</menu>
