...
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/ic_save_black_24px"
                android:layout_alignParentRight="true" />

            <ImageButton
                android:id="@+id/pick_form_gallery"
                android:paddingLeft="@dimen/list_item_spacing"
                android:paddingRight="@dimen/list_item_spacing"
                android:paddingTop="@dimen/list_item_spacing_half"
                android:paddingBottom="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
